quark/test/quark/AST/Errors/invalidAssign-001.qk
// RUN: not quark --emit-ast "%s" 2>&1 | FileCheck "%s"

fn foo: -> i32 {
  1 = 2;
}
// CHECK:Error: Assigning value to temporary value
